# blackjack_RLandAdvancedDL

./: blackjack.py  hw_script.ipynb  pyproject.toml
