[tool.poetry]
name = "blackjack-rlandadvanceddl"
version = "0.1.0"
description = ""
authors = ["Aleksandr <alex.iv.vad@gmail.com>"]
readme = "README.md"
packages = [{include = "blackjack_rlandadvanceddl"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.1"
numpy = "^1.23.4"
seaborn = "^0.12.1"
gym = "^0.26.2"
jupyter = "^1.0.0"
tqdm = "^4.64.1"
optuna = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
